--- a/Bioenlinea/bioenlinea.html
+++ b/Bioenlinea/bioenlinea.html
@@ -173,13 +173,6 @@
             <li id="back-to-top"><a href="#"><img src="imgs/bttoplila.png" alt="Back to Top"></a></li>
         </ul>
     </footer>    
-    <script>
-        document.getElementById("hamburger-menu").addEventListener("click", function () {
-                var mobileNav = document.getElementById("mobile-nav");
-                this.classList.toggle("change");
-                mobileNav.style.display = (mobileNav.style.display === "block") ? "none" : "block";
-        });
-
-    </script>
+    <script src="bioenlinea.js"></script>
 </body>
 </html>
